# casca

./: .env.example  .gitignore  README.md  pyproject.toml
casca/: actions.py  agent.py  cli.py  config.py  desktop.py  logger.py  prompts.py  replay.py  safety.py  screen.py  utils.py
casca/models/: __init__.py  base.py  hf_provider.py  mock_provider.py
examples/: tasks.yaml
web/: app.py
web/static/: style.css
web/templates/: index.html  run.html
